--- a/{{cookiecutter.extension_id}}/.github/workflows/main.yml
+++ b/{{cookiecutter.extension_id}}/.github/workflows/main.yml
@@ -31,8 +31,8 @@ jobs:
           
       - name: Setup Git
         run: |
-          git config --global user.name "USERNAME"
-          git config --global user.email "EMAIL@EXAMPLE.COM"
+          git config --global user.name "{{cookiecutter.author}}"
+          git config --global user.email "{{cookiecutter.author_email}}"
           
       - name: Get Current Version Number
         run: |
