--- a/{{cookiecutter.extension_id}}/.github/workflows/main.yml
+++ b/{{cookiecutter.extension_id}}/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Setup Node version
         uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 22
           
       - name: Create Changelog
         run: |
@@ -57,7 +57,7 @@ jobs:
         uses: actions/cache/restore@v3
         id: restore-cache
         with:
-            path: /home/runner/work/REPO_NAME/REPO_NAME/node_modules
+            path: /home/runner/work/{{cookiecutter.extension_id}}/{{cookiecutter.extension_id}}/node_modules
             key: ${{"{{"}} runner.os }}-${{"{{"}} steps.generate-hash.outputs.CACHE_HASH }}
           
       - name: Install vsce
@@ -67,13 +67,13 @@ jobs:
         uses: actions/cache/save@v3
         id: save-cache
         with:
-          path: /home/runner/work/REPO_NAME/REPO_NAME/node_modules
+          path: /home/runner/work/{{cookiecutter.extension_id}}/{{cookiecutter.extension_id}}/node_modules
           key: ${{"{{"}} runner.os }}-${{"{{"}} steps.generate-hash.outputs.CACHE_HASH }}
 
       - name: Package Extension
         run: |
           echo ${{"{{"}} runner.os }}-${{"{{"}} steps.generate-hash.outputs.CACHE_HASH }}
-          npx @vscode/vsce package -o "./REPO_NAME-${{"{{"}} steps.package-version.outputs.current-version}}.vsix"
+          npx @vscode/vsce package -o "./{{cookiecutter.extension_id}}-${{"{{"}} steps.package-version.outputs.current-version}}.vsix"
         
       - name: Push Tags
         run: |
@@ -83,7 +83,7 @@ jobs:
       - name: GitHub Release
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "./REPO_NAME-*"
+          artifacts: "./{{cookiecutter.extension_id}}-*"
           bodyFile: ${{"{{"}} github.workspace }}-CHANGELOG.txt
           tag: ${{"{{"}} steps.package-version.outputs.current-version}}
           prerelease: false
