Fix missing cookiecutter template

--- a/{{cookiecutter.extension_id}}/package.json
+++ b/{{cookiecutter.extension_id}}/package.json
@@ -40,7 +40,7 @@
                     "group": "{{cookiecutter.extension_id}}"
                 }
             ],
-            "REPO_NAME.submenu": [
+            "{{cookiecutter.extension_id}}.submenu": [
                 {
                     "when": "resourceLangId == html",
                     "command": "{{cookiecutter.extension_id}}.command",
